/*
 * $Id: ChangeLog,v 1.6563 2009/08/28 01:28:26 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-08-28 11:15 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
   * source/tip/mail.prg
     source/tip/sendmail.prg
     ! Fixed attachement when parameter was character. reported by
       Robert Campsmith  on comp.lang.xharbour
     ! Enhaced the attachfile() method from  tipmail class

2009-08-27 20:53 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
   * makefile.bc
   * makefile.vc
     * Only build tipssl.lib if HB_DIR_OPENSSL is set
       /*
          NOTE: Seems the none of the other make file
          are updated to build tipssl.lib at all!!!
        */
   * mdir.bat
     + Added auto detection of OpenSSL

   * source/rdd/dbcmd.c
     * Hack to __DBCOPY() to explicitly prefix target file with the current path
       to to avoid inadvertent override of file in the SET PATH folder.

       /*
          NOTE: RDD authors please review if this is the correct place for such hack.
        */

2009-08-27 12:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/common/hbver.c
    + add compiler version for Embarcadero 6.20 (a.k.a. RAD Studio 2010)

2009-08-26 13:05 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  ! contrib/gtwvw/gtwvw.c
    ! fixed wrong color on status bar
    ! fixed some problems with inkey

2009-08-26 12:43 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * ChangeLog
    ! Restored my and Augusto's ChangeLog entries from 19-21 August, which
      were accidentally deleted by Luiz.

2009-08-24 19:50 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/tip/thtml.prg
    ! fixed ansitohtml() to parse "&" char when alone.
      f.e. ? oemtohtml("&")

2009-08-24 15:02 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  ! contrib/gtwvw/gtwvw.c