@@ -1,28 +1,29 @@
 #
-# $Id: Makefile,v 1.6 2006/09/23 18:03:05 lf_sfnet Exp $
+# $Id: Makefile,v 1.7 2007/05/11 16:30:46 hazi01 Exp $
 #
 
 ROOT = ../../
 
 C_SOURCES = \
-	base64x.c \
-	utils.c \
+   base64x.c \
+   utils.c \
 
 PRG_SOURCES= \
-	httpcln.prg \
-	popcln.prg \
-	credent.prg \
-	encoder.prg \
-	encb64.prg \
-	encqp.prg \
-	encurl.prg \
-	mail.prg \
-	url.prg \
-	client.prg \
-	ftpcln.prg \
-	smtpcln.prg	\
-	cgi.prg \
-        thtml.prg
+   cgi.prg \
+   client.prg \
+   credent.prg \
+   encb64.prg \
+   encoder.prg \
+   encqp.prg \
+   encurl.prg \
+   ftpcln.prg \
+   httpcln.prg \
+   mail.prg \
+   popcln.prg \
+   sendmail.prg \
+   smtpcln.prg\
+   thtml.prg \
+   url.prg \
 
 LIBNAME=tip
 
